--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -5,7 +5,8 @@ $text: 300;
 
 //! <--- Pallete ---->
 $col1: #1b1e2b;
-$accent: red;
+$col2: #2a2d3e;
+$accent: lightgreen;
 
 //! Misc
 $defBlur: blur(3px);
