--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -9,6 +9,7 @@
 @import "./static/header";
 @import "./static/footer";
 @import "./dynamic/landing";
+@import "./static/sidebar";
 html {
    * {
       margin: 0px;
