--- a/src/scss/static/_footer.scss
+++ b/src/scss/static/_footer.scss
@@ -11,6 +11,7 @@ footer {
    width: 100%;
    height: 100px;
    font-weight: $text;
+   position: relative;
    //* All Columns
    .column {
       padding: 15px;
@@ -57,5 +58,9 @@ footer {
       flex-direction: row;
       justify-content: space-around;
       align-items: center;
+      background-color: transparent;
+      position: fixed;
+      bottom: 0px;
+      left: 0px;
    }
 } ;
