--- a/src/scss/static/_header.scss
+++ b/src/scss/static/_header.scss
@@ -12,8 +12,10 @@ header {
    top: 0px;
    left: 0px;
    z-index: 999;
+   border: 1px solid magenta;
    h1 {
       text-transform: uppercase;
+      color: $accent;
    }
    //* <--- Links --->
    .links {
@@ -25,12 +27,14 @@ header {
       position: fixed;
       bottom: 0px;
       left: 0px;
+      z-index: inherit;
       width: 100%;
       height: 45px;
       display: flex;
       flex-direction: row;
       justify-content: space-around;
       align-items: center;
+      border: 1px solid magenta;
       a {
          color: white;
       }
@@ -52,11 +56,13 @@ header {
             a {
                list-style-type: none;
                text-decoration: none;
-               color: white;
+               color: $accent;
             }
             //* <--- about page ---->
             li:nth-child(3) {
-               background-color: $accent;
+               color: $accent;
+               border: 2px solid $accent;
+               background-color: transparent;
                padding: 5px;
                border-radius: 2px;
             }
