--- a/src/scss/dynamic/_landing.scss
+++ b/src/scss/dynamic/_landing.scss
@@ -7,7 +7,7 @@
    height: 100vh;
    z-index: -1;
 
-   .wrapper {
+   .landing-wrapper {
       color: white;
       background-color: rgba($col1, 0.8);
       backdrop-filter: $defBlur;
