--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -10,12 +10,13 @@
 @import "./static/footer";
 @import "./dynamic/landing";
 @import "./static/sidebar";
+@import "./dynamic/render";
+@import "./dynamic/thumbnail";
 html {
    * {
       margin: 0px;
       padding: 0px;
       box-sizing: border-box;
-      transition: all 0.1s ease-in;
       font-family: "Montserrat", sans-serif;
       scroll-behavior: smooth;
    }
@@ -24,18 +25,34 @@ html {
 //! <--- Mobile --->
 body {
    width: 100%;
+   @include backdrop-prop;
+   transition: all 0.3s ease-in;
    background-color: $col1;
-   //* <--- takes account the offset of the header which is 75px in height --->
-   margin-top: 75px;
-   //* <--- takes account the height of the navigation bar on the bottom of the page 50px --->
-   margin-bottom: 45px;
    .wrapper {
       width: inherit;
+      background-color: rgba($col2, 0.9);
+      backdrop-filter: $defBlur;
+      margin: 0px;
+      padding: 0px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
    }
 }
 //! <--- Tablet --->
 @media screen and (min-width: 1050px) {
    body {
-      margin-bottom: 0px;
+      .wrapper {
+         width: 1000px;
+         margin-left: auto;
+         margin-right: auto;
+         margin-top: 100px;
+         padding: 25px;
+         display: flex;
+         flex-direction: row;
+         justify-content: space-between;
+         align-items: flex-start;
+         @include backdrop-prop;
+      }
    }
 }
