--- a/src/scss/static/_header.scss
+++ b/src/scss/static/_header.scss
@@ -12,7 +12,7 @@ header {
    top: 0px;
    left: 0px;
    z-index: 999;
-   border: 1px solid magenta;
+   border: 1px solid cyan;
    h1 {
       text-transform: uppercase;
       color: $accent;
@@ -34,7 +34,10 @@ header {
       flex-direction: row;
       justify-content: space-around;
       align-items: center;
-      border: 1px solid magenta;
+      // <----- all svg inside selector ----->
+      svg:hover {
+         cursor: pointer;
+      }
       a {
          color: white;
       }
