--- a/src/scss/dynamic/_render.scss
+++ b/src/scss/dynamic/_render.scss
@@ -67,6 +67,7 @@
       justify-content: flex-start;
       align-items: center;
       width: 100%;
+      margin-bottom: 25px;
       h2 {
          margin-top: 20px;
          margin-bottom: 15px;
@@ -74,8 +75,7 @@
       .render-titles {
          display: grid;
          grid-template-columns: repeat(2, 1fr);
-         grid-gap: 20px;
-         margin-right: 25px;
+         grid-gap: 25px;
       }
    }
 }
