--- a/src/scss/dynamic/_thumbnail.scss
+++ b/src/scss/dynamic/_thumbnail.scss
@@ -7,6 +7,8 @@
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
+   &:hover {
+   }
    //* Poster
    .poster {
       img {
@@ -21,14 +23,19 @@
       background-color: white;
       padding: 6px;
       height: 150px;
+      border-radius: 1px;
+      padding: 10px;
+
       h2 {
          color: $col1;
          font-size: 16px;
          font-weight: $heading;
          width: 150px;
+         height: 20px;
          white-space: nowrap;
-         overflow-x: hidden;
+         overflow: hidden;
          text-overflow: ellipsis;
+         margin: 0px;
       }
       .release-date {
          color: $col1;
@@ -39,6 +46,8 @@
          color: $col1;
          font-size: 14px;
          font-style: italic;
+         height: 50px;
+         overflow: hidden;
       }
       .action-btns {
          display: none;
@@ -66,9 +75,7 @@
 //! <---- tablet ----->
 @media screen and (min-width: 1050px) {
    .thumbnail {
-      .info {
-      }
-      &:hover {
-      }
+      box-shadow: 0px 5px 15px 2px lightslategray;
+      border-radius: 3px;
    }
 }
