--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -12,6 +12,8 @@
 @import "./static/sidebar";
 @import "./dynamic/render";
 @import "./dynamic/thumbnail";
+@import "./dynamic//single.scss";
+
 html {
    * {
       margin: 0px;
@@ -26,7 +28,7 @@ html {
 body {
    width: 100%;
    @include backdrop-prop;
-   transition: all 0.3s ease-in;
+   transition: all 0.5s ease-in;
    background-color: $col1;
    .wrapper {
       width: inherit;
@@ -47,6 +49,7 @@ body {
          margin-left: auto;
          margin-right: auto;
          margin-top: 100px;
+         margin-bottom: 20px;
          padding: 25px;
          display: flex;
          flex-direction: row;
