--- a/src/scss/static/_header.scss
+++ b/src/scss/static/_header.scss
@@ -12,7 +12,6 @@ header {
    top: 0px;
    left: 0px;
    z-index: 999;
-   border: 1px solid cyan;
    h1 {
       text-transform: uppercase;
       color: $accent;
@@ -27,7 +26,7 @@ header {
       position: fixed;
       bottom: 0px;
       left: 0px;
-      z-index: inherit;
+      z-index: 999;
       width: 100%;
       height: 45px;
       display: flex;
@@ -64,7 +63,7 @@ header {
             //* <--- about page ---->
             li:nth-child(3) {
                color: $accent;
-               border: 2px solid $accent;
+               border: 1px solid $accent;
                background-color: transparent;
                padding: 5px;
                border-radius: 2px;
