--- a/src/scss/dynamic/_thumbnail.scss
+++ b/src/scss/dynamic/_thumbnail.scss
@@ -1,4 +1,5 @@
 @import "../globals.scss";
+//Stylesheet for all movie thumbnails on main pages
 //! <----- Mobile ------>
 .thumbnail {
    width: 200px;
@@ -7,6 +8,7 @@
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
+
    &:hover {
    }
    //* Poster
@@ -27,7 +29,7 @@
       padding: 10px;
 
       h2 {
-         color: $col1;
+         color: $accent;
          font-size: 16px;
          font-weight: $heading;
          width: 150px;
@@ -66,16 +68,23 @@
          span {
             color: white;
             background-color: $col1;
-            padding: 2px 5px 2px 5px;
+            padding: 3px 7px 3px 7px;
             border-radius: 3px;
+            font-size: 14px;
+         }
+         .like svg {
+            cursor: pointer;
+         }
+         .watchlist svg {
+            cursor: pointer;
          }
       }
    }
 }
-//! <---- tablet ----->
+//! <---- tablet/desktop ----->
 @media screen and (min-width: 1050px) {
    .thumbnail {
-      box-shadow: 0px 5px 15px 2px lightslategray;
       border-radius: 3px;
+      box-shadow: 0px 5px 15px 2px lightslategray;
    }
 }
