--- a/src/scss/globals.scss
+++ b/src/scss/globals.scss
@@ -6,7 +6,7 @@ $text: 300;
 //! <--- Pallete ---->
 $col1: #1b1e2b;
 $col2: #2a2d3e;
-$accent: violet;
+$accent: #fe5b5b;
 
 //! Misc
 $defBlur: blur(10px);
