--- a/src/scss/static/_header.scss
+++ b/src/scss/static/_header.scss
@@ -67,6 +67,13 @@ header {
                background-color: transparent;
                padding: 5px;
                border-radius: 2px;
+               transition: all 0.5s ease;
+            }
+            li:nth-child(3):hover {
+               background-color: $accent;
+               a {
+                  color: $col1;
+               }
             }
          }
       }
