--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -14,6 +14,7 @@
 @import "./dynamic/thumbnail";
 @import "./dynamic//single.scss";
 @import "./static/about";
+@import "./dynamic/favourites";
 html {
    * {
       margin: 0px;
