--- a/src/scss/static/_sidebar.scss
+++ b/src/scss/static/_sidebar.scss
@@ -75,7 +75,7 @@
       padding-left: 10px;
       padding-top: 10px;
       padding-bottom: 10px;
-      background-color: $col2;
+      background-color: #2e3344;
       //Title
       h1 {
          font-weight: $subHeading;
