Sidebar Section added
"Trending"

--- a/src/scss/dynamic/_favourites.scss
+++ b/src/scss/dynamic/_favourites.scss
@@ -2,6 +2,7 @@
 //! <----- Mobile ------->
 .favourites-container {
    margin-top: 75px;
+   height: 100vh;
    .likes-container,
    .watchlist-container {
       width: 95%;
