--- a/src/scss/static/_header.scss
+++ b/src/scss/static/_header.scss
@@ -66,7 +66,7 @@ header {
                color: $accent;
                border: 1px solid $accent;
                background-color: transparent;
-               padding: 5px;
+               padding: 5px 10px 5px 10px;
                border-radius: 2px;
                transition: all 0.5s ease;
             }
