--- a/src/scss/dynamic/_favourites.scss
+++ b/src/scss/dynamic/_favourites.scss
@@ -7,7 +7,7 @@
    .watchlist-container {
       width: 95%;
       margin: auto;
-      background-color: white;
+      background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
       border-radius: 3px;
       margin-top: 15px;
       h2 {
