--- a/src/scss/dynamic/_render.scss
+++ b/src/scss/dynamic/_render.scss
@@ -118,7 +118,7 @@
          h2 {
             color: $col1;
          }
-         background-color: rgba(white, 0.9);
+         background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
       }
    }
 }
