--- a/src/scss/dynamic/single.scss
+++ b/src/scss/dynamic/single.scss
@@ -5,6 +5,7 @@
    //Compensate for header;
    margin-top: 75px;
    width: 100%;
+   margin-bottom: 20px;
 
    .render-single {
       .movie-overview {
@@ -157,15 +158,16 @@
          }
       }
 
-      //! <------ Cast Members -------->
+      //* <------ Cast Members -------->
       .cast {
          color: $col1;
          padding: 10px;
-         background: rgba(white, 0.9);
+         background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
          backdrop-filter: $defBlur;
          margin: auto;
          border-radius: 3px;
          width: 95%;
+         overflow-y: auto;
          hr {
             opacity: 0.5;
          }
@@ -203,6 +205,35 @@
                   font-size: 12px;
                   text-align: center;
                }
+            }
+         }
+      }
+
+      //* <------ Trailer -------->
+      .trailer {
+         width: 95%;
+         margin: auto;
+         margin-bottom: 20px;
+         border-radius: 3px;
+         padding: 10px 10px 25px 10px;
+         background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
+
+         .trailer-title {
+            font-size: 20px;
+            font-weight: 700px;
+            margin-bottom: 10px;
+         }
+         hr {
+            opacity: 0.5;
+            margin-bottom: 15px;
+         }
+         iframe {
+            width: 100%;
+            height: 250px;
+            border-radius: 3px;
+            border-style: none;
+            @media screen and (min-width: 700px) {
+               height: 400px;
             }
          }
       }
