--- a/src/scss/static/_sidebar.scss
+++ b/src/scss/static/_sidebar.scss
@@ -61,11 +61,11 @@
    color: white;
    background-color: $col1;
    width: 100%;
-   height: 100vh;
+   height: 110vh;
    position: sticky;
-   top: 75px;
+   top: 74px;
    left: 0px;
-   z-index: 995;
+   z-index: 9999;
    animation: slide-in-bottom 0.5s cubic-bezier(0.86, 0, 0.07, 1) both;
 
    //Heading for all sections in the sidebar
@@ -76,6 +76,13 @@
       padding-top: 10px;
       padding-bottom: 10px;
       background-color: #2e3344;
+      position: sticky;
+      top: 74px;
+      left: 0px;
+      @media screen and (min-width: 1050px) {
+         position: static;
+      }
+
       //Title
       h1 {
          font-weight: $subHeading;
@@ -85,6 +92,7 @@
    }
    .filter {
       margin-bottom: 20px;
+
       .filter-items {
          padding-left: 20px;
          a {
