--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -15,6 +15,7 @@
 @import "./dynamic//single.scss";
 @import "./static/about";
 @import "./dynamic/favourites";
+@import "./static/credits";
 html {
    * {
       margin: 0px;
