--- a/src/scss/static/_sidebar.scss
+++ b/src/scss/static/_sidebar.scss
@@ -100,7 +100,8 @@
             text-decoration: none;
             h2 {
                margin-top: 5px;
-               font-weight: $text;
+               font-weight: $subHeading;
+               font-size: 20px;
             }
          }
       }
@@ -115,7 +116,7 @@
             color: white;
             list-style-type: none;
             text-decoration: none;
-            font-size: 20px;
+            font-size: 16px;
             font-weight: $text;
             margin-top: 5px;
          }
@@ -223,8 +224,10 @@
       }
       .filter {
          .filter-items {
-            h2 {
-               font-size: 15px;
+            a {
+               h2 {
+                  font-size: 15px;
+               }
             }
          }
       }
