--- a/src/scss/static/_sidebar.scss
+++ b/src/scss/static/_sidebar.scss
@@ -153,6 +153,7 @@
                   overflow-x: hidden;
                   white-space: nowrap;
                   text-overflow: ellipsis;
+                  font-size: 14px;
 
                   &:hover {
                      padding-left: 3px;
