--- a/src/scss/dynamic/_landing.scss
+++ b/src/scss/dynamic/_landing.scss
@@ -59,6 +59,8 @@
                flex-direction: column;
                justify-content: center;
                align-items: center;
+               border-radius: 2px;
+               transition: all 0.3s linear;
                // <--- links --->
                a {
                   text-decoration: none;
@@ -74,14 +76,51 @@
                      margin-top: 10px;
                      margin-bottom: 0px;
                   }
+                  &:hover {
+                     color: white;
+                     transition: all 0.5s ease-out;
+                  }
                }
 
                //<---- hover ----->
                &:hover {
-                  background-color: $accent;
                   cursor: pointer;
                   border: 2px solid $accent;
                }
+            }
+            .popular::before,
+            .top-rated::before,
+            .upcoming::before,
+            .now-playing::before,
+            .favourites::before,
+            .about::before {
+               content: "";
+               position: absolute;
+               left: 0;
+               top: 0;
+               width: 100%;
+               height: 100%;
+               background: $accent; /* Hover fill colour */
+               z-index: -1;
+               transition: transform 0.4s; /* How long the hover will fill */
+               transform-origin: 0 0;
+               transition-timing-function: cubic-bezier(0.5, 1.6, 0.4, 0.7);
+            }
+            .popular::before,
+            .top-rated::before,
+            .upcoming::before,
+            .now-playing::before,
+            .favourites::before,
+            .about::before {
+               transform: scaleY(0);
+            }
+            .popular:hover::before,
+            .top-rated:hover::before,
+            .upcoming:hover::before,
+            .now-playing:hover::before,
+            .favourites:hover::before,
+            .about:hover::before {
+               transform: scaleY(1);
             }
             .popular {
                animation: slide-in-bck-bottom 0.3s cubic-bezier(0.25, 0.46, 0.45, 0.94) both;
