--- a/src/scss/dynamic/_thumbnail.scss
+++ b/src/scss/dynamic/_thumbnail.scss
@@ -32,19 +32,19 @@
          transform-origin: 50% 50%;
       }
       15% {
-         transform: translateX(-5px) rotate(-1deg);
+         transform: translateX(-4px) rotate(-0.75deg);
       }
       30% {
-         transform: translateX(3px) rotate(1deg);
+         transform: translateX(1px) rotate(0.75deg);
       }
       45% {
-         transform: translateX(-3px) rotate(-1.5deg);
+         transform: translateX(-1px) rotate(-1deg);
       }
       60% {
-         transform: translateX(2px) rotate(1deg);
+         transform: translateX(1px) rotate(0.75deg);
       }
       75% {
-         transform: translateX(-1px) rotate(-0.5deg);
+         transform: translateX(-0.75px) rotate(-0.5deg);
       }
    }
 
@@ -113,19 +113,20 @@
             cursor: pointer;
             transition: all 0.2s ease;
             &:hover {
-               animation: jello-horizontal 0.9s both;
+               animation: jello-horizontal 0.75s both;
             }
          }
 
          .watchlist svg {
             cursor: pointer;
             &:hover {
-               animation: jello-horizontal 0.9s both;
+               animation: jello-horizontal 0.75s both;
+               fill: $accent;
             }
          }
          a:nth-child(4) {
             &:hover {
-               animation: jello-horizontal 0.9s both;
+               animation: jello-horizontal 0.75s both;
             }
          }
 
