--- a/src/scss/static/_header.scss
+++ b/src/scss/static/_header.scss
@@ -14,8 +14,8 @@ header {
    z-index: 999;
    border-top: 1px solid $accent;
    h1 {
-      text-transform: uppercase;
       color: $accent;
+      font-size: 25px;
    }
    //* <--- Links --->
    .links {
