Revert old changes
-Sidebar fixed to old state

--- a/src/scss/static/_footer.scss
+++ b/src/scss/static/_footer.scss
@@ -7,11 +7,16 @@ footer {
    display: flex;
    flex-direction: row;
    justify-content: space-around;
-   align-items: center;
+   align-items: flex-start;
    width: 100%;
+   height: 120px;
    font-weight: $text;
+
    @media screen and (min-width: 1050px) {
       display: flex;
+      flex-direction: row;
+      justify-content: space-around;
+      align-items: center;
    }
    //* <---- All Columns ---->
    .column {
@@ -50,7 +55,4 @@ footer {
          }
       }
    }
-}
-.footer-off {
-   display: none;
 }
