--- a/src/scss/dynamic/single.scss
+++ b/src/scss/dynamic/single.scss
@@ -184,12 +184,12 @@
             //! Individual
             .cast-member {
                height: 200px;
-               width: 125px;
+               width: 110px;
                display: flex;
                flex-direction: column;
                justify-content: flex-start;
                align-items: center;
-               margin: 10px;
+               margin: 0px 10px 0px 10px;
                text-align: center;
                img {
                   height: 150px;
