--- a/src/scss/dynamic/_favourites.scss
+++ b/src/scss/dynamic/_favourites.scss
@@ -2,7 +2,6 @@
 //! <----- Mobile ------->
 .favourites-container {
    margin-top: 75px;
-   height: 100vh;
    .remove {
       &:hover {
          animation: shake-bottom 0.8s cubic-bezier(0.455, 0.03, 0.515, 0.955) both;
@@ -38,6 +37,7 @@
    .likes-container,
    .watchlist-container {
       width: 95%;
+      min-height: 350px;
       margin: auto;
       background-image: linear-gradient(120deg, #fdfbfb 0%, #ebedee 100%);
       border-radius: 3px;
